--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,8 @@ body{
   font-weight: 700;
   letter-spacing: -0.05em;
   color: #3F4E4F;
-  background-color: #DFD3C3; 
+  background-color: #DFD3C3;
+  border-radius: 0 0 15px 15px;
 }
 
 .navbar--logo{
