--- a/src/App.css
+++ b/src/App.css
@@ -183,5 +183,39 @@ body{
 .navbar--items{
   padding: 20px; 
   display: flex; 
+}
 
+/* AddHabit Section */
+.add--habit--container{
+  display: block;
+}
+
+.input--container{
+  margin: 0 auto;
+  padding: 56px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.habits--container{
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  width: 100%;
+  height: auto;
+  margin: 0 auto;  
+  color: #161619; 
+  font-weight: 500; 
+  letter-spacing: -0.04em; 
+}
+
+.habit--item{
+  font-size: 20px; 
+  background-color: #DFD3C3;
+  padding: 20px; 
+  width: 16%; 
+  height: auto; 
+  text-align: center; 
+  border-radius: 40px; 
 }
