--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,25 @@
 body{
   margin: 0;
   box-sizing: border-box;
+  height: 100vh;
+  background-color: #F8EDE3;
+}
+
+#root{
+  margin: 0;
+  box-sizing: border-box; 
+  height: 100vh; 
+  background-color: #F8EDE3
 }
 
 /* App */ 
 .App{
-  background-color: #F8EDE3;
   justify-content: center;
   align-items: center;
   font-family: 'Inter', sans-serif;
   height: 100vh; 
-  width: auto;  
+  width: auto;
+  background-color: #F8EDE3
 }
 
 /* Info-section */ 
@@ -199,9 +208,11 @@ body{
 }
 
 .habits--container{
-  display: flex;
-  justify-content: center;
-  align-items: center; 
+  display: grid;
+  justify-items: center; 
+  grid-template-columns: repeat(4, 0.5fr);
+  grid-template-rows: repeat(auto-fill);
+  row-gap: 10px; 
   width: 100%;
   height: auto;
   margin: 0 auto;  
@@ -211,11 +222,17 @@ body{
 }
 
 .habit--item{
+  overflow: hidden;
+  word-wrap: break-word;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  color: #3F4E4F;
   font-size: 20px; 
   background-color: #DFD3C3;
-  padding: 20px; 
-  width: 16%; 
+  padding: 20px;
+  width: 80%; 
   height: auto; 
   text-align: center; 
-  border-radius: 40px; 
+  border-radius: 40px;
 }
