--- a/src/App.css
+++ b/src/App.css
@@ -265,7 +265,8 @@ body{
 .fa-x:before{
   font-size: 12px; 
   color: #000;
-  text-align: center;  
+  text-align: center;
+  pointer-events: none;
 }
 
 
