added category component to app

--- a/src/App.css
+++ b/src/App.css
@@ -270,4 +270,14 @@ body{
   pointer-events: none;
 }
 
+/* Category Component Styling */
+
+.category--container{
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  margin: 0 auto; 
+  height: auto; 
+}
+
 
