--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,8 @@ body{
   padding: 0 25px 0 25px;
   font-weight: 400;
   letter-spacing: -0.06em;
-  margin-bottom: 10px;  
+  margin-bottom: 10px; 
+  cursor: grab;  
 }
 
 .category--item--negative{
