--- a/src/App.css
+++ b/src/App.css
@@ -379,42 +379,35 @@ body{
 
 /* Google Sign In styling */
 
-#gSingInWrapper{
+.btn--visible{
+  margin: 0 auto; 
+  display: flex;
+  padding-right: 20px; 
+}
+
+.btn--hide, .user--info--hidden{
+  display: none; 
+}
+
+.user--info--visible{
   display: flex;
   justify-content: center;
   align-items: center; 
-  margin-right: 25px; 
-}
-#customBtn {
-  display: inline-block;
-  background: white;
-  color: #444;
-  width: 190px;
-  border-radius: 5px;
-  border: thin solid #888;
-  box-shadow: 1px 1px 1px grey;
-  white-space: nowrap;
-}
-#customBtn:hover {
-  cursor: pointer;
-}
-span.icon {
-  /* background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat; */
-  display: inline-block;
-  vertical-align: middle;
-  width: 42px;
-  height: 42px;
-}
-span.buttonText {
-  display: inline-block;
-  vertical-align: middle;
-  padding-left: 42px;
-  padding-right: 42px;
-  font-size: 14px;
-  font-weight: bold;
+  width: 300px; 
+  margin: 0 auto; 
+  color: #3F4E4F;
+  font-size: 18px;
 }
 
-.label{
-  margin-right: 10px; 
+.user--info--visible img{
+  width:auto;
+  display: block; 
+  height: 40px; 
+  border-radius: 50%;
+  justify-content: center; 
+  margin: 0 15px 0 15px;
+
 }
+
+
 
